Sun Aug 30 03:59:43 2009  Tanaka Akira  <akr@fsij.org>

	* timev.h (TIME_SCALE): defined as 1000000000.
	  (struct vtm): subsec is replaced by subsecx.
	  subsec * TIME_SCALE == subsecx.
	
	* time.c: avoid rational in most cases.
	  (struct time_object): timev is replaced by timexv.
	  timev * TIME_SCALE == timexv.

Sun Aug 30 03:17:25 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (init_leap_second_info): use TIMET_MAX.

Sun Aug 30 01:15:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_all): use gzfile_newstr;
	  set and convert its encoding. [ruby-dev:38304]

Sat Aug 29 20:40:02 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* vm_eval.c (rb_call0): gets rid of checking method cache twice.

	* method.h (rb_get_method_entry): added a prototype of the function.
	  (rb_method_entry_without_cache): more friendly name.

Sat Aug 29 12:16:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (Dir.mktmpdir): rolled back r24699.  [ruby-dev:39193]

Sat Aug 29 03:27:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#make_tmpname): removed thread race
	  condition.

	* lib/tmpdir.rb (Dir.mktmpdir): ditto.

Fri Aug 28 20:29:34 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb (Tempfile#callback): Debug information should be
	  output to stderr, not stdout; pointed out by akira yamada.
	  cf. [ruby-dev:39072]

Fri Aug 28 20:34:24 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: use SafeStringValue instead of
	  Check_SafeStr.

Fri Aug 28 13:30:43 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (do_select): rollback r24680. void struct initializer is
	  invalid.

Fri Aug 28 11:45:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* method.h (rb_method_definition_t): split from rb_method_entry_
	  to deal aliases.  [ruby-dev:39165]

	* proc.c (struct METHOD): contains rb_method_entry_t copy.

Fri Aug 28 10:21:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
